--- a/index.html
+++ b/index.html
@@ -2,21 +2,28 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <title>Pan Tadeusz</title>
     </head>
     <body>
-        <h1>Pan Tadeusz, czyli Ostatnie zajazd na Litwie: historia szlachecka z roku 1811 i 1812 we dwunastu księgach wierszem</h1>
-        <p>Spis treści</p>
-        <ul>
-            <li><a href="./k1.html">Księga 1</a></li>
-            <li><a href="./k2.html">Księga 2</a></li>
-            <li><a href="./k3.html">Księga 3</a></li>
-            <li><a href="./k6.html">Księga 6</a></li>
-            <li><a href="./k7.html">Księga 7</a></li>
-            <li><a href="./k8.html">Księga 8</a></li>
-            <li><a href="./k9.html">Księga 9</a></li>
-            <li><a href="./k11.html">Księga 11</a></li>
-            <li><a href="./k12.html">Księga 12</a></li>
-        </ul>
+        <div class="container mt-3">
+        <h1  class="text-success">Pan Tadeusz, czyli Ostatni zajazd na Litwie: historia szlachecka z roku 1811 i 1812 we dwunastu księgach wierszem</h1>
+        <h2  class="text-success text-center">Spis treści</h2>
+
+        <div class="d-grid gap-2 col-6 mx-auto">
+                <a href="./k1.html" class="btn btn-success">Księga 1</a>
+                <a href="./k2.html" class="btn btn-success">Księga 2</a>
+                <a href="./k3.html" class="btn btn-success">Księga 3</a>
+                <a href="./k4.html" class="btn btn-success">Księga 4</a>
+                <a href="./k5.html" class="btn btn-success">Księga 5</a>
+                <a href="./k6.html" class="btn btn-success">Księga 6</a>
+                <a href="./k7.html" class="btn btn-success">Księga 7</a>
+                <a href="./k8.html" class="btn btn-success">Księga 8</a>
+                <a href="./k9.html" class="btn btn-success">Księga 9</a>
+                <a href="./k10.html" class="btn btn-success">Księga 10</a>
+                <a href="./k11.html" class="btn btn-success">Księga 11</a>
+                <a href="./k12.html" class="btn btn-success">Księga 12</a>
+              </div>
+        </div>
     </body>
 </html>
